updated test fixtures

--- a/build.xml
+++ b/build.xml
@@ -35,7 +35,7 @@
 		</javac>
 		<javac srcdir="${test.src}" destdir="${test.bin}" includeAntRuntime="false">
             <classpath refid="classpath"/>	
-			<include name="edu/umb/cs680/hw11/CarTest.java"/>
+			<include name="edu/umb/cs680/hw11/*Test.java"/>
 		</javac>
 	</target>
 
